# hwlocality

./: .clippy.toml  .gitignore  .tarpaulin.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  codecov.yml
.github/: dependabot.yml
.github/actions/setup-hwloc-dependencies/: action.yml
.github/actions/system-information/: action.yml
.github/workflows/: ci.yml  rust.yml
examples/: allocate_bound.rs  bind_process.rs  bind_process_cpu.rs  bind_threads.rs  bind_threads_cpu.rs  bind_to_last_core.rs  number_of_packages.rs  process_cpu_bindings.rs  processor_cache.rs  support.rs  walk_linear.rs  walk_tree.rs
hwlocality-sys/: Cargo.toml  README.md  build.rs
hwlocality-sys/src/: lib.rs
src/: bitmap.rs  bitmaps.rs  builder.rs  cache.rs  cpu.rs  depth.rs  distances.rs  editor.rs  errors.rs  ffi.rs  info.rs  lib.rs  linux.rs  memory.rs  path.rs  strategies.rs  support.rs  topology_object.rs  windows.rs  xml.rs
src/bitmap/: cow.rs  index.rs  mod.rs  newtypes.rs  reference.rs
src/bitmaps/: index.rs  indices.rs  mod.rs
src/cpu/: binding.rs  cache.rs  caches.rs  cpuset.rs  cpusets.rs  kind.rs  kinds.rs  mod.rs  sets.rs
src/export/: mod.rs  synthetic.rs  xml.rs
src/ffi/: int.rs  mod.rs  string.rs  transparent.rs  unknown.rs
src/interop/: linux.rs  mod.rs  windows.rs
src/memory/: attribute.rs  attributes.rs  binding.rs  mod.rs  nodeset.rs  nodesets.rs
src/object/: attributes.rs  depth.rs  distance.rs  hierarchy.rs  list.rs  lists.rs  mod.rs  search.rs  types.rs
src/object/attributes/: bridge.rs  cache.rs  group.rs  mod.rs  numa.rs  osdev.rs  pci.rs
src/object/search/: io.rs  mod.rs
src/objects/: attributes.rs  depth.rs  distances.rs  mod.rs  types.rs
src/topology/: builder.rs  editor.rs  mod.rs  support.rs
src/topology/export/: mod.rs  synthetic.rs  xml.rs
src/topology_object/: mod.rs  types.rs
tests/: single-threaded.rs
