[package]
name = "hwlocality-sys"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Low-level bindings for the hwloc hardware locality library"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
links = "hwloc"

# See hwlocality's main Cargo.toml for detailed feature descriptions
[features]
hwloc-latest = ["hwloc-2_8_0"]
hwloc-2_0_4 = []
hwloc-2_1_0 = ["hwloc-2_0_4"]
hwloc-2_2_0 = ["hwloc-2_1_0"]
hwloc-2_3_0 = ["hwloc-2_2_0"]
hwloc-2_4_0 = ["hwloc-2_3_0"]
hwloc-2_5_0 = ["hwloc-2_4_0"]
hwloc-2_8_0 = ["hwloc-2_5_0"]
vendored = ["dep:autotools", "dep:cmake"]
# This feature does nothing in -sys and is only here for CI convenience
proptest = []

[target.'cfg(windows)'.dependencies]
# Used for OS typedefs
windows-sys.workspace = true

[target.'cfg(not(windows))'.dependencies]
# Used for OS typedefs
libc.workspace = true

[build-dependencies]
# Used for vendored builds on OSes other than Windows
autotools = { version = "0.2", optional = true }

# Used for vendored builds on Windows
cmake = { version = "0.1.50", optional = true }

# Used to locate hwloc except in cmake vendored builds
pkg-config = "0.3.8"

[dev-dependencies]
# Used to check trait implementations
static_assertions.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
